<resources>
    <string name="app_name">MomMom</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Welcome to MomMom</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_news">News</string>
    <string name="menu_support">Ask for help</string>
    <string name="menu_memory">The Journal</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_account">Account</string>

    <string name="check_connection_network">Please check the network connection again</string>
    <string name="vui_long_doi">Please wait</string>
    <string name="dang_dang_bai">Posting</string>
    <string name="vui_long_nhap_day_du_thong_tin">Please enter full information</string>
    <string name="taikhoan_matkhau_khong_dung">Incorrect account or password</string>
    <string name="dang_nhap_thai_bai">Login failed</string>
    <string name="create_post_failed">Create post failed</string>
    <string name="create_memory_failed">Create journal failed</string>
    <string name="dang_ky_thai_bai">Registration failed</string>
    <string name="dang_ky_thanh_cong">Registration successfully</string>
    <string name="username_ton_tai">This account has already existed</string>
    <string name="tao_tk_thanhcong">Account successfully created</string>
    <string name="co_loi_xay_ra">Something went wrong, contact admin</string>
    <string name="label_create_post_activity">Create post</string>
    <string name="create_post_success">Create post successfully</string>
    <string name="create_memory_success">Create journal successfully</string>
    <string name="label_post_detail_activity">Post detail</string>
    <string name="label_image_detail_activity">Image</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_create_profile">Create profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_edit_profile">Edit profile</string>
    <string name="title_activity_edit_post">Edit post</string>

    <string name="text_take_photo">Take photo</string>
    <string name="text_pick_photo">Pick from Gallery</string>
    <string name="button_title_cancel">Cancel</string>
    <string name="button_ok">OK</string>

    <string name="hint_title">Title</string>
    <string name="hint_description">Content</string>

    <string name="message_post_was_created">Post was created</string>
    <string name="error_fail_create_post">Fail to create post</string>
    <string name="error_fail_load_image">Fail to load image</string>
    <string name="error_fail_crop_image">Fail to crop image</string>
    <string name="error_smaller_image">Image is too small. Required image size 100x100 px</string>
    <string name="error_incorrect_file_type">Incorrect file type</string>
    <string name="error_bigger_file">File size is bigger than 10Mb</string>
    <string name="message_creating_post">Creating post ..</string>
    <string name="message_saving">Saving ..</string>
    <string name="warning_empty_image">Image is required</string>
    <string name="warning_empty_title">Title is required</string>
    <string name="warning_empty_description">Description is required</string>
    <string name="error_post_title_length">Max length of the title should be less than 255 symbols</string>
    <string name="error_fail_remove_post">Fail to remove post</string>
    <string name="message_post_was_removed">Post was removed</string>
    <string name="error_fail_update_post">Fail to update post</string>
    <string name="error_post_was_removed">Post was removed</string>
    <string name="confirm_deletion_post">Delete this post?</string>

    <string name="comment_text_hint">Write a comment...</string>
    <string name="button_post_comment">Post comment</string>

    <string name="label_comments">Comments (%1$d):</string>

    <string name="create_post_menu_label">Post</string>
    <string name="create_post_full_menu_label">Create post</string>
    <string name="sign_out_menu_label">Sign out</string>
    <string name="edit_profile_menu_label">Edit profile</string>
    <string name="button_title_save">Done</string>
    <string name="button_title_continue">Continue</string>

    <!-- Strings related to registration and login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_conf_password">Confirm password</string>
    <string name="action_create_profile">Continue</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_profile_name_length">Max length of the name should be less than 120 symbols</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_confirm_password">Wrong password confirmation</string>
    <string name="action_sign_in">Sign in</string>
    <string name="permissions_not_granted">Cancelling, required permissions are not granted</string>
    <string name="error_fail_create_profile">Fail to create profile</string>
    <string name="error_fail_update_profile">Fail to update profile</string>
    <string name="text_login">Thank you for using our application! Please, sign in for continue your action.</string>
    <string name="error_authentication">Authentication failed.</string>
    <string name="error_google_play_services">Google Play Services error.</string>
    <string name="button_login_with_facebook">Login with facebook</string>
    <string name="button_login_with_google">Login with google</string>

    <string name="error_general">Somthing went wrong.</string>
    <string name="error_general_post">Somthing went wrong with post, id: %1$s</string>
    <string name="internet_connection_failed">No internet connection</string>

    <!-- Strings related to login -->

    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="profile_menu_item">Profile</string>
    <string name="collapse_text_label">Show less</string>
    <string name="expand_text_label">Show more</string>
    <string name="add_complain">Complain</string>
    <string name="edit_post_menu">Chỉnh sửa bài</string>
    <string name="delete_post_menu">Xóa bài</string>
    <string name="complain_text">You can complain to this post if it contains violence,
        bullying and threats, hate speech, tragic events and sexually explicit contents.
        Nobody will see the post if you complain to it. You can\'t delete your complain.</string>

    <string name="send_comment_button_label">Send</string>
    <string name="posted_by_label">Created by:</string>

    <plurals name="posts_counter_format">
        <item quantity="one">post</item>
        <item quantity="other">posts</item>
    </plurals>

    <plurals name="likes_counter_format">
        <item quantity="one">like</item>
        <item quantity="other">likes</item>
    </plurals>

    <string name="posts_label">Posts:</string>
    <string name="complain_sent">Complain was sent successfully</string>
    <string name="now_time_range">now</string>

    <string name="duration_minutes_shortest">%1$d m</string>
    <string name="duration_hours_shortest">%1$d h</string>
    <string name="duration_days_shortest">%1$d d</string>
    <string name="duration_week_shortest">%1$d w</string>

    <string name="post_image_transition_name" translatable="false">post_image_transition</string>
    <string name="post_author_image_transition_name" translatable="false">post_author_image_transition_name</string>
    <string name="message_new_post_was_created">New post was created</string>

    <plurals name="new_posts_counter_format">
        <item quantity="one">%1$d new post</item>
        <item quantity="other">%1$d new posts</item>
    </plurals>

    <string name="edit_comment_menu_item">Edit</string>
    <string name="delete_comment_menu_item">Delete</string>
    <string name="message_comment_was_removed">Comment was removed</string>
    <string name="message_comment_was_edited">Comment was edited</string>
    <string name="title_edit_comment">Edit comment</string>

    <!--Firebase errors-->
    <string name="permission_denied_error">Please check your rules to access the Firebase Realtime Database</string>
    <string name="hint_felling">Feeling</string>
    <string name="hint_memory">What are you thinking?</string>
    <string name="default_notification_channel_id">JournalMother</string>
    <string name="fcm_message">Journal Mother Message</string>
    <string name="please_comment">Please leave a comment</string>
    <string name="commented">Commented</string>
    <string name="vui_long_chon_kernel">Please choice marital status</string>
    <string name="vui_long_chon_voting">Please choice fetal status</string>
    <string name="vui_long_chon_number_baby">Please choice number baby</string>

    <string-array name="feelings">
        <item>Vui vẻ</item>
        <item>Hạnh phúc</item>
        <item>Háo hức</item>
        <item>Phấn khích</item>
        <item>Mệt mỏi</item>
        <item>Lo lắng</item>
    </string-array>
</resources>