<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_baseline_ac_unit_24"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_baseline_group_24"
            android:title="@string/menu_support" />
        <item
            android:id="@+id/nav_memory"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_memory" />

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_account" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_setting" />
    </group>
</menu>