<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_the_journal">

    <fragment
        android:id="@+id/nav_the_journal"
        android:name="com.sh.journalmotherapp.ui.journal.TheJournalFragment"
        android:label="@string/menu_memory"
        tools:layout="@layout/fragment_the_journal" />

    <fragment
        android:id="@+id/nav_ask_for_help"
        android:name="com.sh.journalmotherapp.ui.askforhelp.AskForHelpFragment"
        android:label="@string/menu_support"
        tools:layout="@layout/fragment_ask_for_help" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.sh.journalmotherapp.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.sh.journalmotherapp.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/activity_detail_user" />

</navigation>