<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/newCommentContainer"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/activity_post_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/imageContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/_8sdp">

                <ImageView
                    android:id="@+id/postImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:transitionName="@string/post_image_transition_name"
                    android:visibility="visible"
                    tools:targetApi="lollipop" />
            </RelativeLayout>

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/authorImageView"
                android:layout_alignEnd="@+id/authorImageView"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="@dimen/_8sdp"
                android:layout_toStartOf="@+id/authorImageView"
                android:fontFamily="@font/roboto_medium"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingRight="@dimen/_16sdp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_15ssp" />

            <LinearLayout
                android:id="@+id/authorContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleTextView"
                android:layout_alignParentStart="true"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingRight="@dimen/_16sdp">

                <TextView
                    android:id="@+id/authorLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:text="@string/posted_by_label" />

                <TextView
                    android:id="@+id/authorTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/countersContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/authorContainer"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:gravity="center_vertical">

                <LinearLayout
                    android:id="@+id/dateContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp">

                    <ImageView
                        android:id="@+id/dateImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_time"
                        tools:ignore="VectorDrawableCompat" />

                    <TextView
                        android:id="@+id/dateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingStart="@dimen/_8sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/descriptionEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/countersContainer"
                android:layout_marginBottom="@dimen/_8sdp"
                android:autoLink="all"
                android:fontFamily="@font/roboto_regular"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingRight="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/commentsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/descriptionEditText"
                android:layout_marginBottom="@dimen/_8sdp"
                android:fontFamily="@font/roboto_medium"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingRight="@dimen/_16sdp"
                android:text="Bình luận"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_13ssp" />

            <RelativeLayout
                android:id="@+id/commentsParentContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/commentsLabel"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingRight="@dimen/_16sdp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/commentsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layoutManager="LinearLayoutManager"
                    tools:listitem="@layout/item_list_comment" />

            </RelativeLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/authorImageView"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_alignTop="@+id/imageContainer"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_210sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:transitionName="@string/post_author_image_transition_name"
                tools:targetApi="lollipop" />

        </RelativeLayout>
    </ScrollView>

    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_above="@+id/newCommentContainer"
        android:background="@drawable/top_shadow" />

    <LinearLayout
        android:id="@+id/newCommentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/commentEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/comment_text_hint"
            android:inputType="textMultiLine"
            android:maxHeight="@dimen/_100sdp"
            android:minHeight="@dimen/_50sdp"
            android:padding="@dimen/_8sdp" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/edt_custom_xanhdatroi"
            android:enabled="false"
            android:minWidth="0dp"
            android:paddingLeft="@dimen/_16sdp"
            android:paddingRight="@dimen/_16sdp"
            android:text="@string/send_comment_button_label"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>




